# fruitless-direction

./: .env.example  .gitignore  README.md  modal_app.py  pyproject.toml
scripts/: generate_steer_vector.py
src/fruitless_direction/: attacks.py  prompts.py  steering.py
tests/: test_attacks.py
