[build-system]
requires = ["uv>=0.1.37"]
build-backend = "uv.build"

[project]
name = "fruitless-direction"
version = "0.0.1"
dependencies = [
  "torch>=2.3.0",
  "transformers>=4.46",
  "accelerate",
  "modal>=0.58.0",
  "plotly>=5.22.0",
  "python-dotenv",
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
  "tqdm"
]

[tool.black]
target-version = ["py311"]

[tool.ruff]
line-length = 100
